force-app/main/default/objects/Company__c/fields/ActivitySector__c.field-meta.xml
<CustomField>
    <fullName>ActivitySector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Setor de Atividade</label>
    <referenceTo>ActivitySector__c</referenceTo>
    <relationshipLabel>Empresas</relationshipLabel>
    <relationshipName>Empresas</relationshipName>
    <type>Lookup</type>
</CustomField>