force-app/main/default/objects/Company__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloqueado</label>
    <type>Checkbox</type>
</CustomField>