force-app/main/default/objects/Company__c/fields/ClientGroup__c.field-meta.xml
<CustomField>
    <fullName>ClientGroup__c</fullName>
    <label>Grupo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NÃO SEGMENTADO</fullName>
            </value>
            <value>
                <fullName>REDISTRIBUIÇÃO</fullName>
            </value>
            <value>
                <fullName>MODULAR</fullName>
            </value>
            <value>
                <fullName>CLÁSSICO</fullName>
            </value>
            <value>
                <fullName>INOVADOR</fullName>
            </value>
            <value>
                <fullName>CLUBE A</fullName>
            </value>
            <value>
                <fullName>CONECTA</fullName>
            </value>
            <value>
                <fullName>DINAMICO</fullName>
                <label>DINÂMICO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>