force-app/main/default/objects/Company__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Empresas</relationshipLabel>
    <relationshipName>Empresas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>