force-app/main/default/objects/Company__c/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canal de Distribuição</label>
    <referenceTo>DistributionChannel__c</referenceTo>
    <relationshipLabel>Empresas</relationshipLabel>
    <relationshipName>Empresas</relationshipName>
    <type>Lookup</type>
</CustomField>