force-app/main/default/objects/Company__c/fields/FiscalDomicile__c.field-meta.xml
<CustomField>
    <fullName>FiscalDomicile__c</fullName>
    <label>Domicilio Fiscal</label>
    <length>200</length>
    <type>Text</type>
</CustomField>