force-app/main/default/objects/Company__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escritório de Vendas</label>
    <referenceTo>SalesOffice__c</referenceTo>
    <relationshipLabel>Empresas</relationshipLabel>
    <relationshipName>Empresas</relationshipName>
    <type>Lookup</type>
</CustomField>