force-app/main/default/objects/Company__c/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipe de Vendas</label>
    <referenceTo>SalesTeam__c</referenceTo>
    <relationshipLabel>Empresas</relationshipLabel>
    <relationshipName>Empresas</relationshipName>
    <type>Lookup</type>
</CustomField>