force-app/main/default/objects/Company__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Conta__c</columns>
    <columns>DistributionChannel__c</columns>
    <columns>SalesOffice__c</columns>
    <columns>SalesTeam__c</columns>
    <columns>ClientGroup__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>